--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -19,8 +19,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: gradle build
         run: |
-          chmod +x ./gradlew
-          ./gradlew clean build
+          chmod +x gradlew && ./gradlew clean build
 
       - name: kill 443 port if exist
         run: |
