--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -16,6 +16,12 @@ jobs:
         run: |
           sudo chown -R ${{ secrets.NAME }}:${{ secrets.PASSWORD }} /home/actions-runner/_work/runner-test
 
+      - name: Set up JDK 17
+        uses: actions/setup-java@v2
+        with:
+          java-version: '17'
+          distribution: 'open-jdk'
+
       - uses: actions/checkout@v3
       - name: gradle build
         run: |
