--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -5,3 +5,8 @@ networkTimeout=10000
 validateDistributionUrl=true
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
+systemProp.http.proxyHost=http://krmp-proxy.9rum.cc
+systemProp.http.proxyPort=3128
+
+systemProp.https.proxyHost=http://krmp-proxy.9rum.cc
+systemProp.https.proxyPort=3128
