--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -1,58 +1,30 @@
-name: CI/CD Pipeline
-
+name: cd pipeline
 on:
   push:
     branches:
       - main
-
 jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v2
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-
-      - name: Build with Gradle
-
-        run: chmod +x gradlew && ./gradlew build -x test
-
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Build Docker Image
-        run: |
-          docker build -t runner-app:latest .
-          docker tag runner-app:latest ${{ secrets.DOCKER_USERNAME }}/runner-app:latest
-
-      - name: Push the Docker image to Docker Hub
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/runner-app:latest
-
   deploy:
-    needs: build
     runs-on: self-hosted
     steps:
-      - name: Pull Latest Image
+      - name: change permission
         run: |
-          sudo docker pull ${{ secrets.DOCKER_USERNAME }}/runner-app:latest
+          sudo chown -R ${{ secrets.NAME }}:${{ secrets.PASSWORD }} /home/actions-runner/_work/runner-test
 
-      - name: Stop Current Running Container
-        run: |
-          sudo docker stop $(sudo docker ps -q) 2>/dev/null || true
+      - name: checkout Repository
+        uses: actions/checkout@v3
 
-      - name: Run Latest Image
+      - name: gradle build
         run: |
-          sudo docker run --name api-server -d -p 8080:8080 ${{ secrets.DOCKER_USERNAME }}/runner-app:latest
+          cd /home/actions-runner/_work/runner-test/runner-test
+          chmod +x ./gradlew && ./gradlew clean build
 
-      - name: Delete Old Image
+      - name: kill 443 port if exist
         run: |
-          sudo docker system prune -f
+          if sudo lsof -i :443; then
+            echo "Port 443 is already in use. Killing the process..."
+            sudo lsof -i :443 | awk 'NR!=1 {print $2}' | sudo xargs kill -9
+          fi
+      - name: deploy
+        run: |
+          sudo java -jar build/libs/runnertest-0.0.1-SNAPSHOT.jar
