feat: build action 추가

--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -15,9 +15,9 @@ jobs:
         uses: actions/checkout@v3
 
       - name: gradle build
-        run: |
-          cd /home/actions-runner/_work/runner-test/runner-test
-          chmod +x ./gradlew && ./gradlew clean build
+        uses: gradle/gradle-build-action@v2.4.2
+        with:
+          arguments: build
 
       - name: kill 443 port if exist
         run: |
