--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -24,7 +24,7 @@ jobs:
 
       - name: gradle build
         run: |
-          chmod +x ./gradlew -Dhttp.proxyHost=http://krmp-proxy.9rum.cc -Dhttp.proxyPort=3128 -Dhttps.proxyHost=http://krmp-proxy.9rum.cc -Dhttps.proxyPort=3128
+          chmod +x ./gradlew && ./gradlew -Dhttp.proxyHost=http://krmp-proxy.9rum.cc -Dhttp.proxyPort=3128 -Dhttps.proxyHost=http://krmp-proxy.9rum.cc -Dhttps.proxyPort=3128
           ./gradlew clean build
 
       - name: kill 443 port if exist
