--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -10,6 +10,11 @@ jobs:
       - name: checkout Repository
         uses: actions/checkout@v3
 
+      - name: Setup JDK
+        uses: actions/setup-java@v2
+        with:
+          java-version: '17'
+
       - name: gradle build
         run: |
           chmod +x ./gradlew
