--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -43,4 +43,6 @@ jobs:
 
       - name: Deploy
         run: |
-          sudo java -jar /home/actions-runner/_work/runner-test/build/libs/runnertest-0.0.1-SNAPSHOT.jar
+          cd /home/actions-runner/_work/runner-test/build/libs/
+          sudo chmod +x runnertest-0.0.1-SNAPSHOT.jar
+          sudo java -jar runnertest-0.0.1-SNAPSHOT.jar
