--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -45,4 +45,5 @@ jobs:
         run: |
           cd /home/actions-runner/_work/runner-test/
           sudo chmod +x runnertest-0.0.1-SNAPSHOT.jar
-          sudo java -jar runnertest-0.0.1-SNAPSHOT.jar
+          sudo nohup java -jar /home/actions-runner/_work/runner-test/build/libs/runnertest-0.0.1-SNAPSHOT.jar &
+
