--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -44,6 +44,5 @@ jobs:
       - name: Deploy
         run: |
           cd /home/actions-runner/_work/runner-test/
-          sudo chmod +x runnertest-0.0.1-SNAPSHOT.jar
-          sudo nohup java -jar /home/actions-runner/_work/runner-test/runnertest-0.0.1-SNAPSHOT.jar &
+          ./deploy.sh
 
