--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -1,8 +1,13 @@
 name: cd pipeline
 on:
-  push:
+  pull_request:
     branches:
       - main
+
+permissions:
+  checks: write
+  pull-requests: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
